--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -37,15 +37,12 @@ body {
 
 .page {
   @include breakpoint($large) {
-    float: right;
-    width: calc(100% - #{$right-sidebar-width-narrow});
-    padding-right: $right-sidebar-width-narrow;
-  }
+      padding-right: 0;
+    }
 
-  @include breakpoint($x-large) {
-    width: calc(100% - #{$right-sidebar-width});
-    padding-right: $right-sidebar-width;
-  }
+    @include breakpoint($x-large) {
+      padding-right: 0;
+    }
 
   .page__inner-wrap {
     float: left;
@@ -511,14 +508,13 @@ body {
   padding-top: 1em;
   border-top: 1px solid $border-color;
 
-  @include breakpoint($large) {
-    float: right;
-    width: calc(100% - #{$right-sidebar-width-narrow});
-  }
+   @include breakpoint($large) {
+      padding-right: 0;
+    }
 
-  @include breakpoint($x-large) {
-    width: calc(100% - #{$right-sidebar-width});
-  }
+    @include breakpoint($x-large) {
+      padding-right: 0;
+    }
 
   a {
     color: inherit;
