--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -38,13 +38,13 @@ body {
 .page {
   @include breakpoint($large) {
     float: right;
-    width: calc(90%);
-    padding-right: 0;
+    width: calc(100% - #{$right-sidebar-width-narrow});
+    padding-right: $right-sidebar-width-narrow;
   }
 
   @include breakpoint($x-large) {
-    width: calc(90%);
-    padding-right: 0;
+    width: calc(100% - #{$right-sidebar-width});
+    padding-right: $right-sidebar-width;
   }
 
   .page__inner-wrap {
@@ -513,13 +513,11 @@ body {
 
   @include breakpoint($large) {
     float: right;
-    width: calc(90%);
-	padding-right: 0;
+    width: calc(100% - #{$right-sidebar-width-narrow});
   }
 
   @include breakpoint($x-large) {
-    width: calc(90% );
-	padding-right: 0;
+    width: calc(100% - #{$right-sidebar-width});
   }
 
   a {
