--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -36,9 +36,16 @@ body {
 }
 
 .page {
-  width: calc(100% - #{$right-sidebar-width-narrow});
-  
-  
+  @include breakpoint($large) {
+    float: right;
+    width: calc(100% - #{$right-sidebar-width-narrow/5});
+    padding-right: $right-sidebar-width-narrow;
+  }
+
+  @include breakpoint($x-large) {
+    width: calc(100% - #{$right-sidebar-width/5});
+    padding-right: $right-sidebar-width;
+  }
 
   .page__inner-wrap {
     float: left;
@@ -504,9 +511,14 @@ body {
   padding-top: 1em;
   border-top: 1px solid $border-color;
 
+  @include breakpoint($large) {
+    float: right;
+    width: calc(100% - #{$right-sidebar-width-narrow});
+  }
 
-  width: calc(100% - #{$right-sidebar-width-narrow});
-  
+  @include breakpoint($x-large) {
+    width: calc(100% - #{$right-sidebar-width});
+  }
 
   a {
     color: inherit;
