--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -36,14 +36,37 @@ body {
 }
 
 .page {
-    @include breakpoint($large) {
-      padding-right: 0;
-    }
+  @include breakpoint($large) {
+    float: right;
+    width: calc(100% - #{$right-sidebar-width-narrow});
+    padding-right: $right-sidebar-width-narrow;
+  }
 
-    @include breakpoint($x-large) {
-      padding-right: 0;
+  @include breakpoint($x-large) {
+    width: calc(100% - #{$right-sidebar-width});
+    padding-right: $right-sidebar-width;
+  }
+
+  .page__inner-wrap {
+    float: left;
+    margin-top: 1em;
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+    clear: both;
+
+    .page__content,
+    .page__meta,
+    .page__share {
+      position: relative;
+      float: left;
+      margin-left: 0;
+      margin-right: 0;
+      width: 100%;
+      clear: both;
     }
   }
+}
 
 .page__title {
   margin-top: 0;
@@ -482,14 +505,26 @@ body {
    ========================================================================== */
 
 .page__related {
-    @include breakpoint($large) {
-      padding-right: 0;
-    }
+  @include clearfix();
+  float: left;
+  margin-top: 2em;
+  padding-top: 1em;
+  border-top: 1px solid $border-color;
 
-    @include breakpoint($x-large) {
-      padding-right: 0;
-    }
+  @include breakpoint($large) {
+    float: right;
+    width: calc(100% - #{$right-sidebar-width-narrow});
   }
+
+  @include breakpoint($x-large) {
+    width: calc(100% - #{$right-sidebar-width});
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+}
 
 .page__related-title {
   margin-bottom: 10px;
